# TP-PPL

./: Bits8.hs  Controller.hs  DataVD.hs  Distribution.hs  Formula.hs  Machine.hs  Main.hs  OneCoin.hs  Primitive.hs  Profe.md  README.md  SSMH.hs  Tp-proba.cabal
minippl/: Distribution.hs  Primitive.hs
test/: Bits8.hs  Formula.hs  OneCoin.hs  SSMH.hs
